--- a/home-page.html
+++ b/home-page.html
@@ -12,3 +12,6 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
     <link href="css/styles.css" rel="stylesheet">
   </head>
+  <body>
+  </body>
+  </html>
