--- a/home-page.html
+++ b/home-page.html
@@ -14,14 +14,13 @@
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <a class="navbar-brand" href="#">Navbar</a>
+  <a class="navbar-mood city" href="#">MOOD CITY</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
   <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
     <div class="navbar-nav">
-      <a class="nav-item nav-link active" href="#">MOOD CITY <span class="sr-only">(current)</span></a>
-      <a class="nav-item nav-link" href="#">SYMPTOMS</a>
+      <a class="nav-item nav-link active" href="#">SYMPTOMS<span class="sr-only">(current)</span></a>
       <a class="nav-item nav-link" href="#">TREATMENT</a>
       <a class="nav-item nav-link" href="#">RESOURCES</a>
     </div>
