--- a/home-page.html
+++ b/home-page.html
@@ -14,7 +14,7 @@
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-mood-city" href="#">MOOD CITY</a>
+    <a class="navbar-mood-city" href="about.html">MOOD CITY</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -22,13 +22,13 @@
     <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
       <ul class="navbar-nav ml-auto mt-2 mt-lg-0">
         <li class="nav-item active">
-          <a class="nav-link" href="#">Symptoms<span class="sr-only">(current)</span></a>
+          <a class="nav-link" href="symptoms.html">Symptoms</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Treatment</a>
+          <a class="nav-link" href="treatment.html">Treatment</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Resources</a>
+          <a class="nav-link" href="resources.html">Resources</a>
         </li>
       </ul>
     </div>
