--- a/home-page.html
+++ b/home-page.html
@@ -21,7 +21,7 @@
 
     <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
       <ul class="navbar-nav ml-auto mt-2 mt-lg-0">
-        <li class="nav-item active">
+        <li class="nav-item">
           <a class="nav-link" href="symptoms.html">Symptoms</a>
         </li>
         <li class="nav-item">
