--- a/home-page.html
+++ b/home-page.html
@@ -7,6 +7,9 @@
     <meta name="author" content="">
 
     <title>Mood City</title>
+        <h1>MOOD CITY</h1>
+        <h2>Psychoeducation for anxiety</h2>
+
 
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
