--- a/symptoms.html
+++ b/symptoms.html
@@ -33,5 +33,69 @@
       </ul>
     </div>
   </nav>
+
+  <h4> Keep in mind, people with anxiety disorders experience symptoms differently. You might have an anxiety disorder if you experience at least three of the following symptoms for more than six months.</h4>
+
+  <b>Thoughts</b>
+
+  <h5>You think that danger is everywhere</h5>
+
+  <h5>You think that something is dangerous when it’s not</h5>
+
+  <h5>You think that bad things are going to happen</h5>
+
+  <h5>You are very critical of yourself</h5>
+
+  <h5>Your worrying is out of control</h5>
+
+
+  <b>Feelings</b>
+
+  <h5>You feel tense most times
+
+  <h5>You feel restlessness, irritable or angry
+
+  <h5>You find it difficult to focus and concentrate
+
+  <h5>You are hypervigilant to threat cues</h5>
+
+
+  <b>Sensations</b>
+
+  <h5>Your heart is pounding or racing</h5>
+
+  <h5>You feel numb</h5>
+
+  <h5>You sweat a lot</h5>
+
+  <h5>You have an upset stomach</h5>
+
+  <h5>You have headaches</h5>
+
+  <h5>You are very tired all the time</h5>
+
+  <h5>You feel like your throat is closing up</h5>
+
+  <h5>You are short of breath</h5>
+
+  <h5>You feel dizzy</h5>
+
+
+  <b>Behaviours</b>
+
+  <h5>You avoid situations, people and things</h5>
+
+  <h5>You cling to people for safety and you find separation very difficult</h5>
+
+  <h5>You do things over and over again</h5>
+
+  <h5>You seek for reassurance a lot</h5>
+
+  <h5>You rely on others to get you through difficult times or you won’t allow people to help you</h5>
+
+  <h5>You can’t sleep</h5>
+
+  <h5>You prepare for all that could go wrong</h5>
+
   </body>
   </html>
