--- a/home-page.html
+++ b/home-page.html
@@ -41,10 +41,12 @@
       <div class="row">
           <div class="col-sm-4">
           </div>
-    <div class="col-sm-8">
+          <div class="col-sm-8">
       <h2>Hi, my name is Sky!</h2>
       <h3>I’m here to reassure you that worry and stress are normal. However, worrying that is normal differs from having an anxiety disorder. Having an anxiety disorder means one is overwhelmed by intense fear and distress. Their quality of life takes a turn for the worse. About 284 million people around the world experienced an anxiety disorder in 2017, making it the most prevalent mental health disorder. If you think you might suffer from anxiety, you are not alone. We will look at some the symptoms, treatment and further help resources together.</h3>
       <h4>Love, Sky x</h4>
+      </div>
+    </div>
     </div>
 
 
