--- a/symptoms.html
+++ b/symptoms.html
@@ -34,68 +34,72 @@
     </div>
   </nav>
 
-  <h4> Keep in mind, people with anxiety disorders experience symptoms differently. You might have an anxiety disorder if you experience at least three of the following symptoms for more than six months.</h4>
-
-  <b>Thoughts</b>
-
-  <h5>You think that danger is everywhere</h5>
-
-  <h5>You think that something is dangerous when it’s not</h5>
-
-  <h5>You think that bad things are going to happen</h5>
-
-  <h5>You are very critical of yourself</h5>
-
-  <h5>Your worrying is out of control</h5>
+  <div class="w3-container">
 
 
-  <b>Feelings</b>
+      <ul><p> Keep in mind, people with anxiety disorders experience symptoms differently. You might have an anxiety disorder if you experience at least three of the following symptoms for more than six months.</p></ul>
 
-  <h5>You feel tense most times
+  <ul><b>Thoughts</b></ul>
 
-  <h5>You feel restlessness, irritable or angry
+  <ul>You think that danger is everywhere</ul>
 
-  <h5>You find it difficult to focus and concentrate
+  <ul>You think that something is dangerous when it’s not</ul>
 
-  <h5>You are hypervigilant to threat cues</h5>
+  <ul>You think that bad things are going to happen</ul>
 
+  <ul>You are very critical of yourself</ul>
 
-  <b>Sensations</b>
-
-  <h5>Your heart is pounding or racing</h5>
-
-  <h5>You feel numb</h5>
-
-  <h5>You sweat a lot</h5>
-
-  <h5>You have an upset stomach</h5>
-
-  <h5>You have headaches</h5>
-
-  <h5>You are very tired all the time</h5>
-
-  <h5>You feel like your throat is closing up</h5>
-
-  <h5>You are short of breath</h5>
-
-  <h5>You feel dizzy</h5>
+  <ul>Your worrying is out of control</ul>
 
 
-  <b>Behaviours</b>
+  <ul><b>Feelings</b></ul>
 
-  <h5>You avoid situations, people and things</h5>
+  <ul>You feel tense most times</ul>
 
-  <h5>You cling to people for safety and you find separation very difficult</h5>
+  <ul>You feel restlessness, irritable or angry</ul>
 
-  <h5>You do things over and over again</h5>
+  <ul>You find it difficult to focus and concentrate</ul>
 
-  <h5>You seek for reassurance a lot</h5>
+  <ul>You are hypervigilant to threat cues</ul>
 
-  <h5>You rely on others to get you through difficult times or you won’t allow people to help you</h5>
 
-  <h5>You can’t sleep</h5>
+  <ul><b>Sensations</b></ul>
 
-  <h5>You prepare for all that could go wrong</h5>
+  <ul>Your heart is pounding or racing</ul>
 
+  <ul>You feel numb</ul>
+
+  <ul>You sweat a lot</ul>
+
+  <ul>You have an upset stomach</ul>
+
+  <ul>You have headaches</ul>
+
+  <ul>You are very tired all the time</ul>
+
+  <ul>You feel like your throat is closing up</ul>
+
+  <ul>You are short of breath</ul>
+
+  <ul>You feel dizzy</ul>
+
+
+  <ul><b>Behaviours</b></ul>
+
+  <ul>You avoid situations, people and things</ul>
+
+  <ul>You cling to people for safety and you find separation very difficult</ul>
+
+  <ul>You do things over and over again</ul>
+
+  <ul>You seek for reassurance a lot</ul>
+
+  <ul>You rely on others to get you through difficult times or you won’t allow people to help you</ul>
+
+  <ul>You can’t sleep</ul>
+
+  <ul>You prepare for all that could go wrong</ul>
+
+  </div>
   </body>
   </html>
