--- a/home-page.html
+++ b/home-page.html
@@ -7,7 +7,7 @@
     <meta name="author" content="">
 
     <title>Mood City</title>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <link rel="astylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link href="styles.css" rel="stylesheet">
   </head>
   <body>
@@ -43,7 +43,7 @@
           </div>
           <div class="col-sm-8">
       <h2>Hi, my name is Sky!</h2>
-      <h3>I’m here to reassure you that worry and stress are normal. However, worrying that is normal differs from having an anxiety disorder. Having an anxiety disorder means one is overwhelmed by intense fear and distress. Their quality of life takes a turn for the worse. About 284 million people around the world experienced an anxiety disorder in 2017, making it the most prevalent mental health disorder. If you think you might suffer from anxiety, you are not alone. We will look at some the symptoms, treatment and further help resources together.</h3>
+      <h3>I’m here to reassure you that worry and stress are normal. However, normal worry is different than an anxiety disorder. Having an anxiety disorder means one is overwhelmed by intense fear and distress. Their quality of life takes a turn for the worse. More than 284 million people around the world are experiencing an anxiety disorder each year, making it the most prevalent mental health illness. If you think you might suffer from anxiety, you are not alone. We will look at some of the symptoms, treatments and further help resources together.</h3>
       <h4>Love, Sky x</h4>
       </div>
     </div>
