--- a/symptoms.html
+++ b/symptoms.html
@@ -92,7 +92,7 @@
 
   <ul>You do things over and over again</ul>
 
-  <ul>You seek for reassurance a lot</ul>
+  <ul>You ask for reassurance a lot</ul>
 
   <ul>You rely on others to get you through difficult times or you won’t allow people to help you</ul>
 
