--- a/home-page.html
+++ b/home-page.html
@@ -13,7 +13,7 @@
   <body>
     <nav class="navbar my-navbar navbar-expand-lg align-items-end">
     <a class="navbar-mood-city" href="home-page.html">MOOD CITY</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+    <button class="navbar-toggler custom-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarNav">
