--- a/home-page.html
+++ b/home-page.html
@@ -11,6 +11,7 @@
     <link href="styles.css" rel="stylesheet">
   </head>
   <body>
+    <!--teachable moment-->
     <nav class="navbar my-navbar navbar-expand-lg align-items-end">
     <a class="navbar-mood-city" href="home-page.html">MOOD CITY</a>
     <button class="navbar-toggler custom-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
