--- a/home-page.html
+++ b/home-page.html
@@ -30,10 +30,16 @@
         </li>
       </ul>
     </div>
+
     </nav>
     <div class="container">
       <div class="row">
         <div class="col-sm-4">
+
+          <div>
+          <img class="mascot" src="https://media0.giphy.com/media/xTiTnrfqkKlJypd3yg/giphy.gif?cid=790b76115d092d8d6d4a6974732c784e&rid=giphy.gif">
+          </div>
+
         </div>
       <div class="col-sm-8">
       <h2>Hi, my name is Sky!</h2>
