--- a/home-page.html
+++ b/home-page.html
@@ -10,6 +10,9 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link href="styles.css" rel="stylesheet">
   </head>
+
+  <STYLE>{text-decoration: none;}</STYLE>
+
   <body>
     <!--teachable moment-->
     <nav class="navbar my-navbar navbar-expand-lg align-items-end">
