--- a/treatment.html
+++ b/treatment.html
@@ -1,53 +1,65 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="">
-    <meta name="author" content="">
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <meta name="description" content="">
+  <meta name="author" content="">
 
-    <title>Mood City</title>
+  <title>Mood City</title>
 
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <link href="css/styles.css" rel="stylesheet">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
-  </head>
-  <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-mood-city" href="about.html">MOOD CITY</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+  <link href="styles.css" rel="stylesheet">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
+</head>
+<body>
+  <nav class="navbar my-navbar navbar-expand-lg align-items-end">
+    <a class="navbar-mood-city" href="home-page.html">MOOD CITY</a>
+    <button class="navbar-toggler custom-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
-
-    <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
+    <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav ml-auto mt-2 mt-lg-0">
         <li class="nav-item">
-          <a class="nav-link" href="symptoms.html">Symptoms</a>
-        </li>
-        <li class="nav-item active">
-          <a class="nav-link" href="treatment.html">Treatment</a>
+          <a class="nav-link" href="symptoms.html">SYMPTOMS</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="resources.html">Resources</a>
+          <a class="nav-link" href="treatment.html">TREATMENT</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="resources.html">RESOURCES</a>
         </li>
       </ul>
     </div>
-    </nav>
+  </nav>
     <div class="container">
       <div class="row">
-          <div class="col">
-            <p>Different anxiety disorders have various symptoms. This also means that each type of anxiety disorder has its own treatment plan. It is always best to discuss your concerns with a doctor before you decide on the treatment you want. Remember, self-diagnosis can have tremendous negative consequences on you. When you self-diagnose, you may miss something that you cannot see or you may think that there is more wrong with you than there actually is. Being concerned for your health is normal. Start by seeing your primary care provider to find out if your anxiety could be related to your physical health. If you need to see a mental health specialist, know that the two main treatments for anxiety disorders are psychotherapy and medication. You may benefit most from a combination of the two. Have patience while you discover which treatments work best for you.</p>
-            <ol>
-            <li><b>Psychotherapy</b></li>
-            <p>If you have an anxiety disorder diagnosis, know that you can recover and be back to normal with 10-20 sessions of therapy, alongside or without medication. Your clinician might suggest that you try Cognitive behavioural therapy (CBT), as research has proven it works. CBT is a treatment that requires active participation. You will learn how to change unhelpful or unrealistic thoughts, how to cope with difficult situations and how to behave in ways that help you face up your fears.</p>
-            <li><b>Medication</b>
-            <p>Antidepressants work on the brain to uplift and calm down moods. Your doctor will likely advise you to take medication along with doing therapy.</p>
-            </ol>
-            <p><strong>Take control of your own mental health</strong></p>
-            <p>If you hurt yourself on purpose, are drinking and taking drugs to block out negative feelings, <b>get help right away</b>.</p>
-          </div>
+        <div class="col">
+          <p>Different anxiety disorders have various symptoms. This also means that each type of anxiety disorder has its own treatment plan. It is always best to discuss your concerns with a doctor before you decide on the treatment you want. Remember, self-diagnosis can have tremendous negative consequences on you. When you self-diagnose, you may miss something that you cannot see or you may think that there is more wrong with you than there actually is. Being concerned for your health is normal. Start by seeing your primary care provider to find out if your anxiety could be related to your physical health. If you need to see a mental health specialist, know that the two main treatments for anxiety disorders are psychotherapy and medication. You may benefit most from a combination of the two. Have patience while you discover which treatments work best for you.</p>
+        </div>
       </div>
-    </div>
+      <div class="row row-treatment">
+        <div class="col-sm">
+          <h2 class="treatment-title">Psychotherapy</h2>
+          <img class="custom-rounded" src="therapy.jpg" alt="therapy" class="center-treatment">
+          <p>If you have an anxiety disorder diagnosis, know that you can recover and be back to normal with 10-20 sessions of therapy, alongside or without medication. Your clinician might suggest that you try Cognitive behavioural therapy (CBT), as research has proven it works. CBT is a treatment that requires active participation. You will learn how to change unhelpful or unrealistic thoughts, how to cope with difficult situations and how to behave in ways that help you face up your fears.</p>
+        </div>
+        <div class="col-sm">
+          <h2 class="treatment-title">Medication</h2>
+          <img class="custom-rounded" src="pills.jpg" alt="pills" class="center-treatment">
+          <p>Antidepressants work on the brain to uplift and calm down moods. Your doctor will likely advise you to take medication along with doing therapy.</p>
+        </div>
+      </div>
+
+      <!-- <ol>
+      <li><b>Psychotherapy</b></li>
+      <p>If you have an anxiety disorder diagnosis, know that you can recover and be back to normal with 10-20 sessions of therapy, alongside or without medication. Your clinician might suggest that you try Cognitive behavioural therapy (CBT), as research has proven it works. CBT is a treatment that requires active participation. You will learn how to change unhelpful or unrealistic thoughts, how to cope with difficult situations and how to behave in ways that help you face up your fears.</p>
+      <li><b>Medication</b>
+      <p>Antidepressants work on the brain to uplift and calm down moods. Your doctor will likely advise you to take medication along with doing therapy.</p>
+    </ol>
+    <p><strong>Take control of your own mental health</strong></p>
+    <p>If you hurt yourself on purpose, are drinking and taking drugs to block out negative feelings, <b>get help right away</b>.</p> -->
+
   </body>
 
   </html>
