--- a/home-page.html
+++ b/home-page.html
@@ -40,7 +40,7 @@
         <div class="col-sm-4">
 
           <div>
-          <img class="mascot" src="https://media0.giphy.com/media/xTiTnrfqkKlJypd3yg/giphy.gif?cid=790b76115d092d8d6d4a6974732c784e&rid=giphy.gif">
+          <img class="img-fluid center-block mascot" src="https://media0.giphy.com/media/xTiTnrfqkKlJypd3yg/giphy.gif?cid=790b76115d092d8d6d4a6974732c784e&rid=giphy.gif">
           </div>
 
         </div>
