--- a/home-page.html
+++ b/home-page.html
@@ -1,21 +1,19 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="">
-    <meta name="author" content="">
-
-    <title>Mood City</title>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-    <link href="styles.css" rel="stylesheet">
-  </head>
-
-  <STYLE>{text-decoration: none;}</STYLE>
-
-  <body>
-    <!--teachable moment-->
-    <nav class="navbar my-navbar navbar-expand-lg align-items-end">
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <meta name="description" content="">
+  <meta name="author" content="">
+  <title>Mood City</title>
+  <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+  <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+  <link href="home-page-css/home-page-styles.css" rel="stylesheet">
+</head>
+<body>
+  <nav class="navbar my-navbar navbar-expand-lg align-items-end">
     <a class="navbar-mood-city" href="home-page.html">MOOD CITY</a>
     <button class="navbar-toggler custom-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -33,26 +31,20 @@
         </li>
       </ul>
     </div>
-
-    </nav>
-    <div class="container">
-      <div class="row">
-        <div class="col-sm-4">
-
-          <div>
+  </nav>
+  <div class="container">
+    <div class="row">
+      <div class="col-sm-4">
+        <div>
           <img class="img-fluid center-block mascot" src="https://media0.giphy.com/media/xTiTnrfqkKlJypd3yg/giphy.gif?cid=790b76115d092d8d6d4a6974732c784e&rid=giphy.gif">
-          </div>
-
         </div>
-      <div class="col-sm-8">
-      <h2>Hi, my name is Sky!</h2>
-      <h3>I’m here to reassure you that worry and stress are normal. However, normal worry is different than an anxiety disorder. Having an anxiety disorder means one is overwhelmed by intense fear and distress. Their quality of life takes a turn for the worse. More than 284 million people around the world are experiencing an anxiety disorder each year, making it the most prevalent mental health illness. If you think you might suffer from anxiety, you are not alone. We will look at some of the symptoms, treatments and further help resources together.</h3>
-      <h4>Love, Sky x</h4>
       </div>
+      <div class="col-sm-8">
+        <h2>Hi, my name is Sky!</h2>
+        <h3>I’m here to reassure you that worry and stress are normal. However, normal worry is different than an anxiety disorder. Having an anxiety disorder means one is overwhelmed by intense fear and distress. Their quality of life takes a turn for the worse. More than 284 million people around the world are experiencing an anxiety disorder each year, making it the most prevalent mental health illness. If you think you might suffer from anxiety, you are not alone. We will look at some of the symptoms, treatments and further help resources together.</h3>
+        <h4>Love, Sky x</h4>
       </div>
     </div>
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-  </body>
+  </div>
+</body>
 </html>
