--- a/treatment.html
+++ b/treatment.html
@@ -6,19 +6,12 @@
   <meta name="description" content="">
   <meta name="author" content="">
   <title>Mood City</title>
-<<<<<<< Updated upstream
   <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-  <script src="js/treatment.js"></script>
+  <script src="treatment-js/treatment.js"></script>
   <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-  <link href="css/treatment-styles.css" rel="stylesheet">
-=======
-
-  <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-  <link href="css/treatment-styles.css" rel="stylesheet">
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
->>>>>>> Stashed changes
+  <link href="treatment-css/treatment-styles.css" rel="stylesheet">
 </head>
 <body>
   <nav class="navbar my-navbar navbar-expand-lg align-items-end">
@@ -50,21 +43,13 @@
     <div class="row row-treatment">
       <div class="col-sm psychotherapy">
         <h2 class="treatment-title">Psychotherapy</h2>
-        <img class="custom-rounded" src="images/therapy-graphic.jpg" alt="therapy">
-<<<<<<< Updated upstream
+        <img class="custom-rounded" src="treatment-images/therapy-graphic.jpg" alt="therapy">
         <p class="text">If you have an anxiety disorder diagnosis, know that you can recover and be back to normal with 10-20 sessions of therapy, alongside or without medication. Your clinician might suggest that you try Cognitive behavioural therapy (CBT), as research has proven it works. CBT is a treatment that requires active participation. You will learn how to change unhelpful or unrealistic thoughts, how to cope with difficult situations and how to behave in ways that help you face up your fears.</p>
-=======
-        <p>If you have an anxiety disorder diagnosis, know that you can recover and be back to normal with 10-20 sessions of therapy, alongside or without medication. Your clinician might suggest that you try Cognitive behavioural therapy (CBT), as research has proven it works. CBT is a treatment that requires active participation. You will learn how to change unhelpful or unrealistic thoughts, how to cope with difficult situations and how to behave in ways that help you face up your fears.</p>
->>>>>>> Stashed changes
       </div>
       <div class="col-sm medication">
         <h2 class="treatment-title">Medication</h2>
-        <img class="custom-rounded" src="images/pill.jpg" alt="pills">
-<<<<<<< Updated upstream
+        <img class="custom-rounded" src="treatment-images/pill.jpg" alt="pills">
         <p class="text">Antidepressants work on the brain to uplift and calm down moods. Your doctor will likely advise you to take medication along with doing therapy.</p>
-=======
-        <p>Antidepressants work on the brain to uplift and calm down moods. Your doctor will likely advise you to take medication along with doing therapy.</p>
->>>>>>> Stashed changes
       </div>
     </div>
   </div>
@@ -75,12 +60,6 @@
 
   <!-- <p><strong>Take control of your own mental health</strong></p>
   <p>If you hurt yourself on purpose, are drinking and taking drugs to block out negative feelings, <b>get help right away</b>.</p> -->
-<<<<<<< Updated upstream
 
-=======
-  <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
->>>>>>> Stashed changes
 </body>
 </html>
