--- a/symptoms.html
+++ b/symptoms.html
@@ -1,78 +1,77 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="">
-    <meta name="author" content="">
-
-    <title>Mood City</title>
-
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <link href="css/styles.css" rel="stylesheet">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
-  </head>
-  <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-mood-city" href="about.html">MOOD CITY</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <meta name="description" content="">
+  <meta name="author" content="">
+  <title>Mood City</title>
+  <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+  <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+  <link href="symptoms-css/symptoms-styles.css" rel="stylesheet">
+</head>
+<body>
+  <nav class="navbar my-navbar navbar-expand-lg align-items-end">
+    <a class="navbar-mood-city" href="home-page.html">MOOD CITY</a>
+    <button class="navbar-toggler custom-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
-
-    <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
+    <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav ml-auto mt-2 mt-lg-0">
-        <li class="nav-item active">
-          <a class="nav-link" href="symptoms.html">Symptoms</a>
+        <li class="nav-item">
+          <a class="nav-link" href="symptoms.html">SYMPTOMS</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="treatment.html">Treatment</a>
+          <a class="nav-link" href="treatment.html">TREATMENT</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="resources.html">Resources</a>
+          <a class="nav-link" href="resources.html">RESOURCES</a>
         </li>
       </ul>
     </div>
   </nav>
-
   <div class="container">
     <div class="row">
-        <div class="col">
-          <p> Keep in mind, people with anxiety disorders experience symptoms differently. You might have an anxiety disorder if you experience at least three of the following symptoms for more than six months.</p>
-            <ul><b>Thoughts</b>
-              <li>You think that danger is everywhere</li>
-              <li>You think that something is dangerous when it’s not</li>
-              <li>You think that bad things are going to happen</li>
-              <li>You are very critical of yourself</li>
-              <li>Your worrying is out of control</li>
-            </ul>
-            <ul><b>Feelings</b>
-              <li>You feel tense most times</li>
-              <li>You feel restlessness, irritable or angry</li>
-              <li>You find it difficult to focus and concentrate</li>
-              <li>You are hypervigilant to threat cues</li>
-            </ul>
-            <ul><b>Sensations</b>
-              <li>Your heart is pounding or racing</li>
-              <li>You feel numb</li>
-              <li>You sweat a lot</li>
-              <li>You have an upset stomach</li>
-              <li>You have headaches</li>
-              <li>You are very tired all the time</li>
-              <li>You feel like your throat is closing up</li>
-              <li>You are short of breath</li>
-              <li>You feel dizzy</li>
-            </ul>
-            <ul><b>Behaviours</b>
-              <li>You avoid situations, people and things</li>
-              <li>You cling to people for safety and you find separation very difficult</li>
-              <li>You do things over and over again</li>
-              <li>You ask for reassurance a lot</li>
-              <li>You rely on others to get you through difficult times or you won’t allow people to help you</li>
-              <li>You can’t sleep</li>
-              <li>You prepare for all that could go wrong</li>
-            </ul>
-          </div>
-        </div>
+      <div class="col">
+        <h2>Symptoms</h2>
+        <p> Keep in mind, people with anxiety disorders experience symptoms differently. You might have an anxiety disorder if you experience at least three of the following symptoms for more than six months.</p>
+        <ul><b>Thoughts</b>
+          <li>You think that danger is everywhere</li>
+          <li>You think that something is dangerous when it’s not</li>
+          <li>You think that bad things are going to happen</li>
+          <li>You are very critical of yourself</li>
+          <li>Your worrying is out of control</li>
+        </ul>
+        <ul><b>Feelings</b>
+          <li>You feel tense most times</li>
+          <li>You feel restless, irritable or angry</li>
+          <li>You find it difficult to focus and concentrate</li>
+          <li>You are hypervigilant to threat cues</li>
+        </ul>
+        <ul><b>Sensations</b>
+          <li>Your heart is pounding or racing</li>
+          <li>You feel numb</li>
+          <li>You sweat a lot</li>
+          <li>You have an upset stomach</li>
+          <li>You have headaches</li>
+          <li>You are very tired all the time</li>
+          <li>You feel like your throat is closing up</li>
+          <li>You are short of breath</li>
+          <li>You feel dizzy</li>
+        </ul>
+        <ul><b>Behaviours</b>
+          <li>You avoid situations, people and things</li>
+          <li>You cling to people for safety and you find separation very difficult</li>
+          <li>You do things over and over again</li>
+          <li>You ask for reassurance a lot</li>
+          <li>You rely on others to get you through difficult times or you won’t allow people to help you</li>
+          <li>You can’t sleep</li>
+          <li>You prepare for all that could go wrong</li>
+        </ul>
       </div>
-  </body>
-  </html>
+    </div>
+  </div>
+</body>
+</html>
