--- a/treatment.html
+++ b/treatment.html
@@ -9,7 +9,6 @@
   <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-  <script src="treatment-js/treatment.js"></script>
   <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
   <link href="treatment-css/treatment-styles.css" rel="stylesheet">
 </head>
@@ -41,15 +40,31 @@
       </div>
     </div>
     <div class="row row-treatment">
-      <div class="col-sm psychotherapy">
+      <div class="col-sm">
         <h2 class="treatment-title">Psychotherapy</h2>
-        <img class="custom-rounded" src="treatment-images/therapy-graphic.jpg" alt="therapy">
-        <p class="text">If you have an anxiety disorder diagnosis, know that you can recover and be back to normal with 10-20 sessions of therapy, alongside or without medication. Your clinician might suggest that you try Cognitive behavioural therapy (CBT), as research has proven it works. CBT is a treatment that requires active participation. You will learn how to change unhelpful or unrealistic thoughts, how to cope with difficult situations and how to behave in ways that help you face up your fears.</p>
+        <div class="img__wrap-therapy">
+          <div class="hover">
+            <img src="treatment-images/therapy-graphic.jpg" alt="therapy" class="img-responsive img__img custom-rounded">
+            <div class="img__description-therapy" data-popup="popup-1">
+              <div class="therapy-text">
+                <p class="text">If you have an anxiety disorder diagnosis, know that you can recover and be back to normal with 10-20 sessions of therapy, alongside or without medication. Your clinician might suggest that you try Cognitive behavioural therapy (CBT), as research has proven it works. CBT is a treatment that requires active participation. You will learn how to change unhelpful or unrealistic thoughts, how to cope with difficult situations and how to behave in ways that help you face up your fears.</p>
+              </div>
+            </div>
+          </div>
+        </div>
       </div>
-      <div class="col-sm medication">
+      <div class="col-sm">
         <h2 class="treatment-title">Medication</h2>
-        <img class="custom-rounded" src="treatment-images/pill.jpg" alt="pills">
-        <p class="text">Antidepressants work on the brain to uplift and calm down moods. Your doctor will likely advise you to take medication along with doing therapy.</p>
+        <div class="img__wrap-medication">
+          <div class="hover">
+            <img src="treatment-images/pill.jpg" alt="therapy" class="img-responsive img__img custom-rounded">
+            <div class="img__description-medication" data-popup="popup-1">
+              <div class="therapy-text">
+                <p class="text">Antidepressants work on the brain to uplift and calm down moods. Your doctor will likely advise you to take medication along with doing therapy.</p>
+              </div>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
   </div>
@@ -62,6 +77,6 @@
 
   <!-- <p><strong>Take control of your own mental health</strong></p>
   <p>If you hurt yourself on purpose, are drinking and taking drugs to block out negative feelings, <b>get help right away</b>.</p> -->
-
+  <script src="treatment-js/treatment.js"></script>
 </body>
 </html>
