--- a/resources.html
+++ b/resources.html
@@ -11,6 +11,7 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
   <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
   <link href="resources-css/resources-styles.css" rel="stylesheet">
+
 </head>
 <body>
   <nav class="navbar my-navbar navbar-expand-lg align-items-end">
@@ -32,5 +33,42 @@
       </ul>
     </div>
   </nav>
+
+  <div class="text">
+
+    <p1>If you suffer from anxiety, help yoursef.</p1>
+
+  </div>
+
+  <div class="link">
+
+    <a href="https://www.moodjuice.scot.nhs.uk/anxiety.asp"> Self-help Guide NHS </a>
+
+    <a href="https://www.getselfhelp.co.uk/anxiety.htm"> CBT for Anxiety </a>
+
+  </div>
+
+  <div class="text">
+
+    <p> However, know that anxiety can be hard to control.It is critical to recognize that some problems are more appropriately treated by professionals than through self-help means.Look for help from people and organisations. Talking to friends and seing your doctor might be the start you need.</p>
+
+    <p> While we're at it, here are some charities and organisations working with people who suffer from anxiety.</p>
+
+  </div>
+
+  <div class="link">
+
+  <a href="https://www.anxietyuk.org.uk/"> Anxiety UK</a>
+
+  <a href="https://www.mind.org.uk/information-support/types-of-mental-health-problems/anxiety-and-panic-attacks/"> Mind UK</a>
+
+  <a href="https://www.nopanic.org.uk/"> No Panic UK</a>
+
+  <a href="http://anxietycare.org.uk/"> Anxiety Care UK</a>
+
+  <p> I wish you good luck with everything and let's definitely keep in touch. Love, Sky x </p>
+
+  <p> Subscribe here to hear from me again ??email-box?? </p>
+
 </body>
 </html>
