--- a/resources.html
+++ b/resources.html
@@ -36,7 +36,7 @@
 
   <div class="text">
 
-    <p1>If you suffer from anxiety, help yoursef.</p1>
+    <p>If you suffer from anxiety, help yoursef.</p>
 
   </div>
 
@@ -50,7 +50,7 @@
 
   <div class="text">
 
-    <p> However, know that anxiety can be hard to control.It is critical to recognize that some problems are more appropriately treated by professionals than through self-help means.Look for help from people and organisations. Talking to friends and seing your doctor might be the start you need.</p>
+    <p> However, know that anxiety can be hard to control. It is critical to recognize that some problems are more appropriately treated by professionals than through self-help means.Look for help from people and organisations. Talking to friends and seing your doctor might be the start you need.</p>
 
     <p> While we're at it, here are some charities and organisations working with people who suffer from anxiety.</p>
 
