pie chart transparent background

--- a/symptoms.html
+++ b/symptoms.html
@@ -51,11 +51,17 @@
 
   ]);
 
-    var options = {'title':'Anxiety', 'width':550, 'height':400};
+
+    var options = {backgroundColor: 'transparent',
+                  'title':'Anxiety', 'width':550, 'height':400};
 
     var chart = new google.visualization.PieChart(document.getElementById('piechart'));
     chart.draw(data, options);
   }
+
+
+
+
   </script>
 
 
